--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI_ATLAS = mongodb+srv://hurtlocker:nepal123@hurtlocker.jljfpw4.mongodb.net/banking?retryWrites=true&w=majority
-PASS_SECRET = anything-that-is-secret
-ACCESS_SECRET = jwt-secret
-REFRESH_SECRET = refresh-secret
-SALT = 10
+PASS_SECRET = something-that-needs-to-be-kept-secret
+ACCESS_SECRET = jwt-access-secret-text
+REFRESH_SECRET = jwt-refresh-secret-text
+SALT = 15
